# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

napi_path = "//foundation//arkui/napi"
ets_runtime_path = "//arkcompiler/ets_runtime"

napi_sources = [
  "callback_scope_manager/native_callback_scope_manager.cpp",
  "module_manager/module_checker_delegate.cpp",
  "module_manager/module_load_checker.cpp",
  "module_manager/native_module_manager.cpp",
  "native_engine/impl/ark/ark_idle_monitor.cpp",
  "native_engine/impl/ark/ark_native_deferred.cpp",
  "native_engine/impl/ark/ark_native_engine.cpp",
  "native_engine/impl/ark/ark_native_reference.cpp",
  "native_engine/impl/ark/ark_native_timer.cpp",
  "native_engine/native_api.cpp",
  "native_engine/native_async_work.cpp",
  "native_engine/native_create_env.cpp",
  "native_engine/native_engine.cpp",
  "native_engine/native_event.cpp",
  "native_engine/native_node_api.cpp",
  "native_engine/native_safe_async_work.cpp",
  "native_engine/native_sendable.cpp",
  "native_engine/worker_manager.cpp",
  "reference_manager/native_reference_manager.cpp",
  "utils/log.cpp",
]

if (is_mingw) {
  napi_sources += [ "utils/platform/windows/file.cpp" ]
} else {
  napi_sources += [ "utils/platform/unix_like/file.cpp" ]
}

declare_args() {
  napi_enable_container_scope = false
  napi_enable_memleak_debug = true

  # Enable pgo for building
  napi_feature_enable_pgo = false

  # Set pgo profdata path
  napi_feature_pgo_path = ""

  # Enable PAC(Pointer Authentication Code) feature
  napi_enable_data_protector = false
  enabled_data_protector = false
}

if (defined(target_cpu) && target_cpu == "arm64" &&
    napi_enable_data_protector && !is_emulator) {
  enabled_data_protector = true
}

is_ohos_standard_system = is_standard_system && !is_arkui_x

module_output_path = "arkcompiler/napi"

if (!defined(ark_standalone_build)) {
  ark_standalone_build = false
}
